--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "angular": "^1.4.8",
     "angular-ui-bootstrap": "^1.3.2",
     "angular-ui-router": "^0.3.1",
-    "bootstrap": "^3.3.6",
-    "ui-router-extras": "^0.1.2"
+    "bootstrap": "^3.3.6"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
